Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14740

LustreError: 76942:0:(qsd_entry.c:243:qsd_refresh_usage()) $$$ failed to read disk usage, rc:-3 qsd:lustre-MDT0000 qtype:prj id:4294967295 enforced:0 granted: 0 pending:0 waiting:0 req:0 usage: 0 qunit:0 qtune:0 edquot:0 default:yes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      On one of system, we frequently hit following errors which prevent us to use project quota:

      [58249.501596] LustreError: 76942:0:(qsd_entry.c:243:qsd_refresh_usage()) $$$ failed to read disk usage, rc:-3  qsd:lustre-MDT0000 qtype:prj id:4294967295 enforced:0 granted: 0 pending:0 waiting:0 req:0 usage: 0 qunit:0 qtune:0 edquot:0 default:yes
      
      [58259.041837] LustreError: 77077:0:(qsd_entry.c:243:qsd_refresh_usage()) $$$ failed to read disk usage, rc:-3  qsd:lustre-MDT0000 qtype:prj id:4294967295 enforced:0 granted: 0 pending:0 waiting:0 req:0 usage: 0 qunit:0 qtune:0 edquot:0 default:yes
      
      [58268.119459] LustreError: 77077:0:(qsd_entry.c:243:qsd_refresh_usage()) $$$ failed to read disk usage, rc:-3  qsd:lustre-MDT0000 qtype:prj id:4294967295 enforced:0 granted: 0 pending:0 waiting:0 req:0 usage: 0 qunit:0 qtune:0 edquot:0 default:yes
      
      

      Problem blames to project ID 4294967295, this out of range kernel could handle, and kernel think this is not a valid project ID.

            wshilong Wang Shilong (Inactive)
            wshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: